--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>개발자 이력서 이정도</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
   </body>
 </html>
